<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_scan"
            android:title="@string/nav_scan"
            android:icon="@drawable/img_3"/>

        <item android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_history"/>

        <item android:id="@+id/nav_support"
            android:title="Support"
            android:icon="@drawable/ic_support"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_my_profile"/>

            <item android:id="@+id/nav_change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_change_password"/>

            <item android:id="@+id/nav_sign_out"
                android:title="@string/nav_sign_out"
                android:icon="@drawable/signout"/>
        </menu>
    </item>
</menu>